alterações no layout da dissertação

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -1597,3 +1597,80 @@ year={1972}
   publisher={University of Manitoba Press}
 }
 
+@book{coleman1994foundations,
+  title={Foundations of social theory},
+  author={Coleman, James S},
+  year={1994},
+  publisher={Harvard university press}
+}
+
+@article{geddes1989sources,
+  title={Sources of popular support for authoritarian regimes},
+  author={Geddes, Barbara and Zaller, John},
+  journal={American Journal of Political Science},
+  pages={319--347},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{stein2013unraveling,
+  title={The unraveling of support for authoritarianism: The dynamic relationship of media, elites, and public opinion in Brazil, 1972--82},
+  author={Stein, Elizabeth A},
+  journal={The International Journal of Press/Politics},
+  volume={18},
+  number={1},
+  pages={85--107},
+  year={2013},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{stevens2006authoritarian,
+  title={Authoritarian attitudes, democracy, and policy preferences among Latin American elites},
+  author={Stevens, Daniel and Bishin, Benjamin G and Barr, Robert R},
+  journal={American Journal of Political Science},
+  volume={50},
+  number={3},
+  pages={606--620},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@article{leets2002experiencing,
+  title={Experiencing hate speech: Perceptions and responses to anti-semitism and antigay speech},
+  author={Leets, Laura},
+  journal={Journal of social issues},
+  volume={58},
+  number={2},
+  pages={341--361},
+  year={2002},
+  publisher={Wiley Online Library}
+}
+
+@article{mullen2004immigrant,
+  title={Immigrant suicide rates as a function of ethnophaulisms: Hate speech predicts death},
+  author={Mullen, Brian and Smyth, Joshua M},
+  journal={Psychosomatic Medicine},
+  volume={66},
+  number={3},
+  pages={343--348},
+  year={2004},
+  publisher={LWW}
+}
+
+@book{foucault1969archeologie,
+  title={L'arch{\'e}ologie du savoir},
+  author={Foucault, Michel and Kremer-Marietti, Ang{\`e}le},
+  volume={1},
+  year={1969},
+  publisher={Gallimard Paris}
+}
+
+@inproceedings{huang2002camera,
+  title={Camera angle affects dominance in video-mediated communication},
+  author={Huang, Wei and Olson, Judith S and Olson, Gary M},
+  booktitle={CHI'02 Extended Abstracts on Human Factors in Computing Systems},
+  pages={716--717},
+  year={2002},
+  organization={ACM}
+}
+
