adding new text and new references

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -1674,3 +1674,105 @@ year={1972}
   organization={ACM}
 }
 
+@misc{marx1844okonomisch,
+  title={{\"O}konomisch-philosophische Manuskripte aus dem Jahre 1844 or Pariser Manuskripte},
+  author={Marx, K},
+  journal={Karl Marx. Selected writings},
+  year={1844},
+  publisher={Oxford University Press Oxford}
+}	
+
+@article{elias1939prozess,
+  title={{\"U}ber den Proze{\ss} der Zivilisation. Soziogenetische und psychogenetische Untersuchungen.},
+  author={Elias, Norbert},
+  journal={DERS.(Hrsg.). Gesammelte Schriften Bd},
+  year={1939}
+}
+
+@article{chase1980social,
+  title={Social process and hierarchy formation in small groups: a comparative perspective},
+  author={Chase, Ivan D},
+  journal={American Sociological Review},
+  pages={905--924},
+  year={1980},
+  publisher={JSTOR}
+}
+
+@article{chase2002individual,
+  title={Individual differences versus social dynamics in the formation of animal dominance hierarchies},
+  author={Chase, Ivan D and Tovey, Craig and Spangler-Martin, Debra and Manfredonia, Michael},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={8},
+  pages={5744--5749},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+@article{ridgeway1989dominance,
+  title={Dominance and collective hierarchy formation in male and female task groups},
+  author={Ridgeway, Cecilia and Diekema, David},
+  journal={American Sociological Review},
+  pages={79--93},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{wirth2006salivary,
+  title={Salivary cortisol changes in humans after winning or losing a dominance contest depend on implicit power motivation},
+  author={Wirth, Michelle M and Welsh, Kathryn M and Schultheiss, Oliver C},
+  journal={Hormones and Behavior},
+  volume={49},
+  number={3},
+  pages={346--352},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@book{sidanius2001social,
+  title={Social dominance: An intergroup theory of social hierarchy and oppression},
+  author={Sidanius, Jim and Pratto, Felicia},
+  year={2001},
+  publisher={Cambridge University Press}
+}
+
+@article{bakker1983determinants,
+  title={Determinants of dominance in male sticklebacks (Gasterosteus aculeatus L.)},
+  author={Bakker, Th CM and Sevenster, P},
+  journal={Behaviour},
+  volume={86},
+  number={1-2},
+  pages={55--71},
+  year={1983},
+  publisher={Brill}
+}
+
+@article{cote2000dominance,
+  title={Dominance hierarchies in female mountain goats: stability, aggressiveness and determinants of rank},
+  author={C{\^o}t{\'e}, Steeve},
+  journal={Behaviour},
+  volume={137},
+  number={11},
+  pages={1541--1566},
+  year={2000},
+  publisher={Brill}
+}
+
+@article{morgan2000predictors,
+  title={Predictors of social status in cynomolgus monkeys (Macaca fascicularis) after group formation},
+  author={Morgan, Drake and Grant, Kathleen A and Prioleau, Osric A and Nader, Susan H and Kaplan, Jay R and Nader, Michael A},
+  journal={American Journal of Primatology: Official Journal of the American Society of Primatologists},
+  volume={52},
+  number={3},
+  pages={115--131},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@phdthesis{bohlin2001determinants,
+  title={Determinants of young children's leadership and dominance strategies during play.},
+  author={Bohlin, Lisa Cornelison},
+  year={2001},
+  school={ProQuest Information \& Learning}
+}
+
