--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -468,16 +468,21 @@ De fato, em termos de dinâmica eleitoral, expera-se que a relação entre eleit
 
 \section{O discurso autoritário}
 
-O discurso é um exercício de poder. Isso ocorre porque é por meio da linguagem que instituimos conhecimento, leis e regras de comportamento, os quais compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Contudo, apesar da validade que sustenta os enunciados que tomados como guia para o comportamento social ser baseada em crença coletiva, a capacidade de instituí-los, em geral, está concentrada em poucos indivíduos \cite{foucault1969archeologie}. 
+O discurso é um exercício de poder. É por meio da linguagem que registramos conhecimento, leis e regras de comportamento. Estes, por sua vez, compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Se observamos alguém furar uma fila, julgamos sua atitude como justa ou oportunista, legal ou criminosa e moral ou anti-ética, por exemplo.  
 
-Uma evidências empíricas deve fenômeno foi apresentada por \citeonline{huang2002camera}. Em experimento conduzido pelos autores, 
+Contudo, importante ressaltar que apesar dos grandes enunciados que constituem guias de comportamento estarem ancorados na crença coletiva de sua validade, a capacidade de instituí-los está concentrada em poucos indivíduos \cite{foucault1969archeologie}. Ou seja, populações creditam legitimidade às suas leis e religiões, por exemplo, porém apenas uma pequena parte da nação é capaz de exercer influência direta no conteúdo de constituições e ritos.
 
-Uma formas de se observar esse fenômeno é levar em consideração que, em interações de grupo simuladas em experimento, 
+A existência de um ranking social, que possui lugar de destaque para poucos e de subalternidade, para muitos, possui gênese anterior a civilização como conhecemos. As assimetrias que observamos nas relações sociais são fruto de um longo histórico de disputas e competição que acompanham a trajetória de sobrevivência de todas as espécies. 
 
-A desigualdade observada na comunicação tem origens anteriores a própria linguagem. Uma grande conjunto de evidências sugere que características individuais são responsáveis por grande parte parte da dinâmica de formação de dominãncia e submissão que fundamenta
+Dentre as causas da hierarquia entre indivíduos, que funda a desigualdade observada na comunicação, a literatura aponta características individuais como determinantes significativos do desenvolvimento de dominância em grupos animais e humanos. Cor \cite{bakker1983determinants}, idade \cite{cote2000dominance, bohlin2001determinants}, peso corporal \cite{morgan2000predictors} e altura \cite{huang2002camera} estão entre os principais preditores da posição social de um indivíduo.    
 
-Como argumenta \citeonline{coleman1994foundations}, interações hierárquicas   
+Se por um lado características sociais explicam o surgimento da dominância, por outro, não são o único ingrediente do surgimento e estabilidade de cadeias de hierarquia que envolvem muitos integrantes. A disputa pelo lugar de dominância é mediada pela dinâmica interna dos grupos que compõem uma sociedade \cite{ridgeway1989dominance} e, em seguida, das relações entre os grupos \cite{chase1980social,chase2002individual}. Ou seja, a desigualdade é segmentada por clivagens formadas a partir de uma dinâmica complexa que envolvem aglutinações hierarquizadas de individúos em grupos que podem ser ordenados por status.  
 
+Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados.
+
+
+
+AAA
 
 Há um bom conjunto de evidências que aponta consequências negativas do \emph{discurso de ódio} sobre suas vítimas. Dentre elas estão traumas emocionais de curto prazo e efeitos comportamentais de longo de prazo \cite{leets2002experiencing}, e aumento da propensão a suicídio \cite{mullen2004immigrant}. Em vários sentidos
 
