update text and bibliography

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -371,15 +371,6 @@ f
   publisher={Cambridge University Press}
 }
 
-@book{sidanius2001socialc2,
-  title={Social dominance: An intergroup theory of social hierarchy and oppression},
-  chapter={Social Dominance Theory: A New Synthesis},
-  pages={31--58},
-  author={Sidanius, Jim and Pratto, Felicia},
-  year={2001},
-  publisher={Cambridge University Press}
-}
-
 @article{hamilton1976illusory,
   title={Illusory correlation in interpersonal perception: A cognitive basis of stereotypic judgments},
   author={Hamilton, David L and Gifford, Robert K},
@@ -389,15 +380,6 @@ f
   pages={392--407},
   year={1976},
   publisher={Elsevier}
-}
-
-@book{sidanius2001socialc8,
-  title={Social dominance: An intergroup theory of social hierarchy and oppression},
-  chapter={"The More of Them' in Prison,the Better": Institutional Terror, Social Control, and the Dynamics of the Criminal Justice System},
-  pages={202--224},
-  author={Sidanius, Jim and Pratto, Felicia},
-  year={2001},
-  publisher={Cambridge University Press}
 }
 
 @article{cano2010racial,
@@ -1774,5 +1756,56 @@ year={1972}
   author={Bohlin, Lisa Cornelison},
   year={2001},
   school={ProQuest Information \& Learning}
+}
+
+@article{siegel1956relationship,
+  title={The relationship of hostility to authoritarianism.},
+  author={Siegel, Saul M},
+  journal={The Journal of Abnormal and Social Psychology},
+  volume={52},
+  number={3},
+  pages={368},
+  year={1956},
+  publisher={American Psychological Association}
+}
+
+@article{gerstenfeld2003hate,
+  title={Hate online: A content analysis of extremist Internet sites},
+  author={Gerstenfeld, Phyllis B and Grant, Diana R and Chiang, Chau-Pu},
+  journal={Analyses of social issues and public policy},
+  volume={3},
+  number={1},
+  pages={29--44},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{ben2016hate,
+  title={Hate speech and covert discrimination on social media: Monitoring the Facebook pages of extreme-right political parties in Spain},
+  author={Ben-David, Anat and Matamoros-Fern{\'a}ndez, Ariadna},
+  journal={International Journal of Communication},
+  volume={10},
+  pages={1167--1193},
+  year={2016},
+  publisher={USC Annenberg Center}
+}
+
+@incollection{beauzamy2013discontinuities,
+  title={Discontinuities of Extreme-Right Political Actors? Overt and Covert Antisemitism in the Contemporary French Radical Right},
+  author={Beauzamy, Brigitte},
+  booktitle={Analysing Fascist Discourse: European Fascism in Talk and Text},
+  volume={5},
+  pages={163},
+  year={2013},
+  publisher={Routledge}
+}
+
+@article{smith1990symptomology,
+  title={A symptomology of an authoritarian discourse},
+  author={Smith, Anna Marie},
+  journal={New Formations},
+  volume={10},
+  pages={41--65},
+  year={1990}
 }
 
