--- a/text/dissertacao.tex
+++ b/text/dissertacao.tex
@@ -468,7 +468,7 @@ De fato, em termos de dinâmica eleitoral, expera-se que a relação entre eleit
 
 \section{O discurso autoritário}
 
-O discurso é um exercício de poder. É por meio da linguagem que registramos conhecimento, leis e regras de comportamento. Estes, por sua vez, compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Se observamos alguém furar uma fila, julgamos sua atitude como justa ou oportunista, legal ou criminosa e moral ou anti-ética, por exemplo.  
+O discurso é um exercício de poder. É por meio da linguagem que registramos conhecimento, leis e regras de comportamento. Estes, por sua vez, compõem as principais categorias que humanos utilizam como referencial para interpretar o mundo ao seu redor. Se observamos alguém furar uma fila, julgamos sua atitude como justa ou oportunista, legal ou criminosa e moral ou anti-ética, por exemplo, e esses termos estão diretamente conectados a instituições sociais como o Estado e a Religião. 
 
 Contudo, importante ressaltar que apesar dos grandes enunciados que constituem guias de comportamento estarem ancorados na crença coletiva de sua validade, a capacidade de instituí-los está concentrada em poucos indivíduos \cite{foucault1969archeologie}. Ou seja, populações creditam legitimidade às suas leis e religiões, por exemplo, porém apenas uma pequena parte da nação é capaz de exercer influência direta no conteúdo de constituições e ritos.
 
@@ -480,15 +480,31 @@ Se por um lado características sociais explicam o surgimento da dominância, po
 
 Como argumentam \citeonline{sidanius2001social}, uma vez que grupos sociais são formados em torno de clivagens específicas -- por exemplo idade, gênero, clãs, nacionalidade, religião, cor e classe social -- seus integrantes reproduzem comportamento competitivo no qual buscam estabelecer superioridade. Nessa dinâmica, a formação de grupos dominantes e dominados estabelece a base da desigualdade, que consiste em uma sobreatribuição de valores positivos aos dominantes e, de valores negativos, aos dominados.
 
+Uma vez que discursos refletem relações de dominância presentes na sociedade, expressões linguísticas do autoritarismo tendem a carregar traços valorativos presentes no seu conteúdo ideológico: a exaltação das figuras reconhecidas como autoridade e a depreciação de grupos minoritários, que possuem status social mais baixo. 
 
+Conforme argumentou-se na seção anterior, indivíduos autoritários aprensentam maior propensão a expressão de preconceito e discriminação em geral. Ainda sobre o conteúdo de discursos autoritários, a literatura aponta a conexão entre autortarismo e demonstração de hostilidade \cite{siegel1956relationship} e trabalhos que se dedicaram a investigar grupos políticos extremistas produziram resultados que sugerem que o dogmatismo político está correlacionado ao uso de discurso de ódio contra adversários e minorias \cite{gerstenfeld2003hate, ben2016hate}.  
 
-AAA
+O discursor autoritário apresenta ainda dimensões revelevantes no que dizem respeito a sua forma e estilo. \citeonline{beauzamy2013discontinuities} argumentou que dois traços comuns ao discurso facista no passado e no presente, são: i) o uso de argumentos elaborados com base em pseudo-ciência, teorias da conspiração, considerações mágicas e exegese religiosa e ii) uso de clichês e esteriótipos populares como metáforas em menções pejorativas a populações marginalizadas.
 
-Há um bom conjunto de evidências que aponta consequências negativas do \emph{discurso de ódio} sobre suas vítimas. Dentre elas estão traumas emocionais de curto prazo e efeitos comportamentais de longo de prazo \cite{leets2002experiencing}, e aumento da propensão a suicídio \cite{mullen2004immigrant}. Em vários sentidos
+Em convergência com essa caracterização, \citeonline{smith1990symptomology}, analisando debates parla\-mentares acerca da ``proibição do fomento a homosexualidade'' que ocorreram entre as décadas de 80 e 90, nos EUA, apontou que as falas autoritárias que emergiram sobre o tema apresentavam um traço marcante: a evocação de preconceitos e associações espúrias como forma de enquadrar a discussão de forma desfavorável para a população gay. Em um dos exemplos, a autora apresenta casos de menção a AIDS como \emph{link} entre homossexualidade e problemas de saúde pública:
 
-Palavras, portanto, são como armas, as quais espera-se que sejam especialmente utilizadas  as de um líder autoritário, que possui como plateia cativa seguidores dogmáticos. 
+\begin{samepage}
+	\begin{quote}
+		A hegemonic interpretation of the AIDS phenomenon is, for example, actually a representation of radical difference, situated within a long tradition of similar representations of 'other' social elements. This AIDS discourse is linked genealogically to popular anxieties about various diseases, communist infiltration, immigrant populations, crime 'waves', drug 'crazes', etc. \cite{smith2015advances}
+	\end{quote}
+\end{samepage}
 
-Portanto, se espera-se que o discurso seja uma atividade relevante na atuação parlamentar, é intuitivo inferir que seja ainda mais para um político que expressa grandes indícios de personalidade anti-democrática. 
+A conexão entre AIDS e homossexualidade é um caso típico do fenômeno cognitivo documentado como \emph{illusory correlation}, segundo o qual duas categorias de eventos são associadas sem que sua co-ocorrência estatística seja signficativa. Além de uma inferência incorreta, capaz de estimular conclusões inadequadas, está na raiz do reforço de esteriótipos de raça, gênero e sexualidade que fazem parte do discurso autoritário. Quando indivíduos percebem maior frequencia relativa de comportamentos rejeitados em um grupo, há uma tendência de identificá-los como atributo intrínseco ao grupo em questão, mesmo que a ocorrência absoluta de ``imposturas'' seja baixa \cite{sidanius2001social}.   
+
+Além da frequente negativação de populações identicadas como desviantes, discursos autoritários também envolvem constantes apelos a restauração da autoridade. 
+
+In his essay Discourse in the Novel (1981), Bakhtin describes AD as a type of political discourse that is intimately fused to its authority, ‘organically connected with a past that is felt to be hierarchically higher’, an authority that was ‘already
+acknowledged in the past’ (p. 342).
+
+De maneira sintética, pode-se definir a estrutura ideal de um discurso autoritária a partir da Figura 1.
+
+\noindent APRESENTAR ESQUEMA DE ESTRUTURA TÍPICA DE DISCURSO AUTORITÁRIO
+
 
 \chapter{Como classificar Agentes Autoritários?}\label{metodologia}
 
